--- a/LagerManager/src/com/application/view/ArtikelData.fxml
+++ b/LagerManager/src/com/application/view/ArtikelData.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -15,9 +16,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.web.HTMLEditor?>
 
-<AnchorPane fx:id="dataPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.application.view.ArtikelDataController">
+<AnchorPane fx:id="dataPane" prefHeight="251.0" prefWidth="347.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.application.view.ArtikelDataController">
 	<children>
 		<VBox layoutX="10.0" layoutY="320.0" spacing="10.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
 			<children>
@@ -75,10 +75,11 @@
 						</VBox>
 					</children>
 				</HBox>
-				<GridPane hgap="5.0" vgap="10.0">
+				<GridPane hgap="5.0" prefHeight="252.0" prefWidth="506.0" vgap="10.0">
 					<columnConstraints>
 						<ColumnConstraints maxWidth="116.0" minWidth="110.0" prefWidth="113.0" />
 						<ColumnConstraints maxWidth="795.0" minWidth="200.0" />
+                  <ColumnConstraints maxWidth="795.0" minWidth="200.0" prefWidth="100.0" />
 						<ColumnConstraints />
 					</columnConstraints>
 					<rowConstraints>
@@ -95,7 +96,7 @@
 								<Button fx:id="anhaengeButton" mnemonicParsing="false" onAction="#handleAnhaengeButton" text="..." />
 							</children>
 						</HBox>
-						<HTMLEditor fx:id="infoField" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" maxHeight="250.0" maxWidth="600.0" minHeight="250.0" minWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextArea fx:id="infoField" minHeight="150.0" prefHeight="500.0" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
 					</children>
 				</GridPane>
 			</children>
